Improve counting in lists - remove count from the post title - add counter to list layout - add weights to keep original order - add slug to posts to have cleaner URLs - followup: content directories could be also renamed

--- a/themes/polaroid/layouts/_default/list.html
+++ b/themes/polaroid/layouts/_default/list.html
@@ -1,8 +1,11 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
   {{ .Content }}
+
+  {{ $counter := 0 }}
   {{ range .Pages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-   
+    {{ $counter = add $counter 1 }}
+    <h2>{{ $counter }}. <a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
   {{ end }}
+
 {{ end }}
